Change repository url to work with the forked package

--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/Automattic/mongoose.git"
+    "url": "git://github.com/alejandro-martinez/mongoose-lv"
   },
   "homepage": "http://mongoosejs.com",
   "browser": "./browser.js",
